# Kaggle-AI-Agents-Course

./: .gitignore  AUTENTICACAO.md  CLAUDE.md  Diário_Aprendizado.md  Diário_Capstone.md  README.md  Regras_Capstone.md
ambient-expense-agent/: Makefile  agents-cli-manifest.yaml  deployment_metadata.json  skills-lock.json
ambient-expense-agent/artifacts/grade_results/: results_20260620_122244.json  results_20260620_122244.md  results_20260620_123342.json  results_20260620_123342.md  results_20260620_123909.json  results_20260620_123909.md
ambient-expense-agent/artifacts/traces/: generated_traces.json
ambient-expense-agent/docs/: dia4_comandos.md
ambient-expense-agent/expense_agent/: agent.py  config.py  fast_api_app.py
ambient-expense-agent/submission_frontend/: Dockerfile  main.py  pyproject.toml
ambient-expense-agent/tests/eval/: eval_config.yaml  generate_traces.py  grade.py
apps/dia1_pokeasset_manager/: README.md  metadata.json  package.json
customer-support-agent/: agents-cli-manifest.yaml
customer-support-agent/app/: agent.py
docs/dia2_testes/: news.txt  summary.txt
docs/dia3_codelab1_tests/: bad_schema.sql
scripts/: fix_bashrc.sh  sample.py
shopping-assistant/: .pre-commit-config.yaml  agents-cli-manifest.yaml  pyproject.toml  threat_model.md
shopping-assistant/.agents/: CONTEXT.md
shopping-assistant/.semgrep/: rules.yaml
shopping-assistant/app/: .env.example  agent.py
shopping-assistant/tests/: test_agent.py
weather-assistant/: agents-cli-manifest.yaml
weather-assistant/app/: fast_api_app.py
(+20 files in other folders)
